--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
   body {
-    background-image: url(images/background.png);
+    background-image: url(images/background.jpg);
+    background-size: cover;
   }
   table {
     margin: auto;
     background-color: black;
     border: 1px solid black;
   }
-  td, .box {
+  td {
     background-color: white;
     border: 1px black;
     width: 2em;
-    min-width: 1em;
+    min-width: 2em;
     height: 2em;
     font-size: 2em;
     font-family: 'Rubik', sans-serif;
@@ -24,4 +25,9 @@
 
   #options {
     text-align: center;
+  }
+
+  input{
+    width: 100%;
+    height: 100%;
   }
